[gd_scene load_steps=6 format=2]

[ext_resource path="res://TempTextures/VibrantSquare3.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ShooterEnemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.06682

[sub_resource type="CircleShape2D" id=2]
radius = 99.5115

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.33681
height = 5.02825

[node name="ShooterEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Detection" type="Area2D" parent="."]
collision_layer = 2147484160
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 3 )
[connection signal="body_entered" from="Detection" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
